// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Updatenotification custom module returns status information without hash 1`] = `
Object {
  "behind": 7,
  "current": "master",
  "hash": "",
  "isBehindInStatus": false,
  "module": "MMM-Fuel",
  "tracking": "origin/master",
}
`;

exports[`Updatenotification default returns status information 1`] = `
Object {
  "behind": 5,
  "current": "develop",
  "hash": "332e429a41f1a2339afd4f0ae96dd125da6beada",
  "isBehindInStatus": false,
  "module": "default",
  "tracking": "origin/develop",
}
`;

exports[`Updatenotification default returns status information early if isBehindInStatus 1`] = `
Object {
  "behind": 5,
  "current": "develop",
  "hash": "332e429a41f1a2339afd4f0ae96dd125da6beada",
  "isBehindInStatus": true,
  "module": "default",
  "tracking": "origin/develop",
}
`;
